gcc/testsuite/g++.old-deja/g++.robertl/ice990323-3.C
// { dg-do assemble  }
// try throwing overloaded function

void f(int)
{
}

void f(long)
{
}

void g()
{
	throw &f; // { dg-error "" } insufficient contextual information
}
